fix line-height & alignment

--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -42,6 +42,8 @@ h1, h2, h3, h4, h5, h6 {
 
 p, pre {
   color: #F9F9F9;
+  line-height: 1.6;
+  text-align: justify;
 }
 
 main.terms p {
